--- a/NewsApp/Views/Storyboards/Intro.storyboard
+++ b/NewsApp/Views/Storyboards/Intro.storyboard
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Coq-eR-8nG">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Coq-eR-8nG">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -36,6 +34,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Oqb-mn-TF9"/>
                         <color key="backgroundColor" red="0.1529411765" green="0.1529411765" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="HFs-gg-esb" firstAttribute="centerY" secondItem="5dC-wi-vTV" secondAttribute="centerY" id="Oaf-Pk-RKe"/>
@@ -43,7 +42,6 @@
                             <constraint firstItem="HFs-gg-esb" firstAttribute="centerX" secondItem="5dC-wi-vTV" secondAttribute="centerX" id="WrN-YL-mhS"/>
                             <constraint firstItem="ITn-1i-3dW" firstAttribute="centerX" secondItem="5dC-wi-vTV" secondAttribute="centerX" id="aeR-C9-peQ"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Oqb-mn-TF9"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ojb-Bi-05b" sceneMemberID="firstResponder"/>
@@ -65,7 +63,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" red="0.1529411765" green="0.1529411765" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ku-cV-n7x" customClass="AMButton" customModule="NewsApp" customModuleProvider="target">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9ku-cV-n7x" customClass="AMButton" customModule="NewsApp" customModuleProvider="target">
                                 <rect key="frame" x="50" y="762" width="314" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="qiC-k3-4S4"/>
@@ -99,6 +97,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="nv9-27-zJI"/>
                         <color key="backgroundColor" red="0.1529411765" green="0.1529411765" blue="0.23921568630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="9ku-cV-n7x" firstAttribute="leading" secondItem="nv9-27-zJI" secondAttribute="leading" constant="50" id="3Sl-lQ-MWy"/>
@@ -119,7 +118,6 @@
                             <constraint firstItem="XDO-vc-7jm" firstAttribute="trailing" secondItem="nv9-27-zJI" secondAttribute="trailing" id="oJ0-tw-Yfa"/>
                             <constraint firstItem="nv9-27-zJI" firstAttribute="bottom" secondItem="9ku-cV-n7x" secondAttribute="bottom" constant="50" id="plN-6k-DhK"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="nv9-27-zJI"/>
                     </view>
                     <connections>
                         <outlet property="aboutLabel" destination="6cU-zY-lER" id="A97-sc-fg5"/>
@@ -130,6 +128,20 @@
             <point key="canvasLocation" x="843.47826086956525" y="42.857142857142854"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="6cU-zY-lER">
+            <size key="intrinsicContentSize" width="133.5" height="16"/>
+        </designable>
+        <designable name="9ku-cV-n7x">
+            <size key="intrinsicContentSize" width="158" height="33"/>
+        </designable>
+        <designable name="G6W-ld-l7v">
+            <size key="intrinsicContentSize" width="191.5" height="95.5"/>
+        </designable>
+        <designable name="ITn-1i-3dW">
+            <size key="intrinsicContentSize" width="105" height="179.5"/>
+        </designable>
+    </designables>
     <resources>
         <image name="background2" width="720" height="1280"/>
     </resources>
